- fixed margin issues on iphone

--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -106,6 +106,7 @@ body#landing {
         margin-top: 10%;
         h1 {
             font-size: floor(@baseFontSize * 3);
+            line-height: 1em;
         }
         h2 {
             margin-top: 20px;
@@ -146,12 +147,13 @@ body#landing {
 }
 
 body#computers {
-    padding: 10px;
+    padding: 5px;
     margin-left: 15%;
     header {
         margin-top: 10%;
         h1 {
             font-size: floor(@baseFontSize * 3);
+            line-height: 1em;
         }
     }
     article {
